--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: npm
+          cache: yarn
 
       - name: Install dependencies
-        run: npm i
+        run: yarn i
 
       - name: Build website
-        run: npm run build && mkdir -p build/.github/workflows && cp .github/workflows/gitee.yml build/.github/workflows && ls ./build/.github/workflows
+        run: yarn run build && mkdir -p build/.github/workflows && cp .github/workflows/gitee.yml build/.github/workflows && ls ./build/.github/workflows
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
